# android_tflite

./: .gitignore  LICENSE  README.md  download_all_assets.sh
common/: util_debug.h  util_egl.h  util_matrix.h  util_render2d.c  util_render2d.h  util_shader.c  util_texture.c  util_texture.h  util_tflite.cpp  util_tflite.h
common/android/: camera_manager.cpp  camera_manager.h  camera_utils.cpp  camera_utils.h  gestureDetector.cpp  gestureDetector.h  util_asset.cpp  util_asset.h
tflite_age_gender/: README.md
tflite_age_gender/app/: build.gradle
tflite_age_gender/app/src/main/: AndroidManifest.xml
tflite_age_gender/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  tflite_age_gender.cpp  tflite_age_gender.h
tflite_age_gender/app/src/main/res/values/: strings.xml
tflite_animegan2/: README.md
tflite_animegan2/app/: build.gradle
tflite_animegan2/app/src/main/: AndroidManifest.xml
tflite_animegan2/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  tflite_animegan2.cpp  tflite_animegan2.h
tflite_animegan2/app/src/main/res/values/: strings.xml
tflite_blazeface/: README.md
tflite_blazeface/app/: build.gradle
tflite_blazeface/app/src/main/: AndroidManifest.xml
tflite_blazeface/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  camera_manager.cpp  camera_manager.h  render_imgui.cpp  render_imgui.h  tflite_blazeface.cpp  tflite_blazeface.h
tflite_blazeface/app/src/main/res/values/: strings.xml
tflite_classification/: README.md
tflite_classification/app/: build.gradle
tflite_classification/app/src/main/: AndroidManifest.xml
tflite_classification/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_imgui.cpp  tflite_classification.cpp  tflite_classification.h
tflite_classification/app/src/main/res/values/: strings.xml
tflite_dbface/: README.md
tflite_dbface/app/: build.gradle
tflite_dbface/app/src/main/: AndroidManifest.xml
tflite_dbface/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_imgui.cpp  render_imgui.h  tflite_dbface.cpp  tflite_dbface.h
tflite_dbface/app/src/main/res/values/: strings.xml
tflite_dense_depth/: README.md
tflite_dense_depth/app/: build.gradle
tflite_dense_depth/app/src/main/: AndroidManifest.xml
tflite_dense_depth/app/src/main/assets/model/: download.sh
tflite_dense_depth/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_dense_depth.h  render_imgui.cpp  render_imgui.h  tflite_dense_depth.cpp  tflite_dense_depth.h
tflite_dense_depth/app/src/main/res/values/: strings.xml
tflite_detection/: README.md
tflite_detection/app/: build.gradle
tflite_detection/app/src/main/: AndroidManifest.xml
tflite_detection/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_imgui.h  tflite_detect.cpp  tflite_detect.h  tflite_style_transfer.h
tflite_detection/app/src/main/res/values/: strings.xml
tflite_face_portrait/: README.md
tflite_face_portrait/app/: build.gradle
tflite_face_portrait/app/src/main/: AndroidManifest.xml
tflite_face_portrait/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  tflite_face_portrait.cpp  tflite_face_portrait.h
tflite_face_portrait/app/src/main/res/values/: strings.xml
tflite_hair_segmentation/: README.md
tflite_hair_segmentation/app/: build.gradle
tflite_hair_segmentation/app/src/main/: AndroidManifest.xml
tflite_hair_segmentation/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_hair.h  tflite_deeplab.cpp  tflite_hair_segmentation.cpp  tflite_hair_segmentation.h
tflite_hair_segmentation/app/src/main/res/values/: strings.xml
tflite_handpose/: README.md
tflite_handpose/app/: build.gradle
tflite_handpose/app/src/main/: AndroidManifest.xml
tflite_handpose/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_handpose.c  render_handpose.h  render_imgui.cpp  render_imgui.h  tflite_handpose.cpp  tflite_handpose.h
tflite_handpose/app/src/main/res/values/: strings.xml
tflite_iris_landmark/: README.md
tflite_iris_landmark/app/: build.gradle
tflite_iris_landmark/app/src/main/: AndroidManifest.xml
tflite_iris_landmark/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  app_engine.cpp  app_engine.h  tflite_facemesh.cpp  tflite_facemesh.h
tflite_iris_landmark/app/src/main/res/values/: strings.xml
tflite_mirnet/: README.md
tflite_mirnet/app/: build.gradle
tflite_mirnet/app/src/main/: AndroidManifest.xml
tflite_mirnet/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_imgui.cpp  render_imgui.h  tflite_mirnet.cpp  tflite_mirnet.h
tflite_mirnet/app/src/main/res/values/: strings.xml
tflite_posenet/: README.md
tflite_posenet/app/: build.gradle
tflite_posenet/app/src/main/: AndroidManifest.xml
tflite_posenet/app/src/main/assets/posenet_model/: README.md
tflite_posenet/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  camera_manager.h  main.cpp  tflite_posenet.cpp  tflite_posenet.h
tflite_posenet/app/src/main/res/values/: strings.xml
tflite_segmentation/: README.md
tflite_segmentation/app/: build.gradle
tflite_segmentation/app/src/main/: AndroidManifest.xml
tflite_segmentation/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  app_engine.cpp  app_engine.h  camera_manager.cpp  render_imgui.cpp  tflite_deeplab.cpp  tflite_deeplab.h
tflite_segmentation/app/src/main/res/values/: strings.xml
tflite_selfie2anime/: README.md
tflite_selfie2anime/app/: build.gradle
tflite_selfie2anime/app/src/main/: AndroidManifest.xml
tflite_selfie2anime/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  render_imgui.cpp  tflite_selfie2anime.cpp  tflite_selfie2anime.h
tflite_selfie2anime/app/src/main/res/values/: strings.xml
tflite_style_transfer/: README.md
tflite_style_transfer/app/: build.gradle
tflite_style_transfer/app/src/main/: AndroidManifest.xml
tflite_style_transfer/app/src/main/cpp/: CMakeLists.txt  app_engine.cpp  app_engine.h  main.cpp  render_imgui.cpp  render_imgui.h  tflite_style_transfer.cpp
(+3 files in other folders)
